--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "medeirosdev/weather-here-developer",
-  "description": "Weather and Climate by Developer Here",
+  "description": "Weather and Climate for Developer Here",
   "type": "library",
   "license": "MIT",
   "authors": [
@@ -9,14 +9,17 @@
       "email": "smedeiros.flavio@gmail.com"
     }
   ],
+  "minimum-stability": "dev",
   "require": {
     "php": ">7.1",
-    "guzzlehttp/guzzle": "^6.3"
+    "guzzlehttp/guzzle": "^6.3",
+    "symfony/http-foundation": "^4.3"
   },
   "require-dev": {
-    "phpunit/phpunit": "^6.0",
+    "phpunit/phpunit": ">6.0",
     "vlucas/phpdotenv": "^2.4",
-    "illuminate/support": ">5.4"
+    "illuminate/support": ">5.4",
+    "symfony/var-dumper": "^4.3"
   },
   "suggest": {
     "illuminate/support": "Allows you to use this package from within Laravel"
@@ -33,7 +36,7 @@
         "MedeirosDev\\WeatherHereDeveloper\\Frameworks\\Laravel\\WeatherHereDeveloperServiceProvider"
       ],
       "aliases": {
-        "DistanceMatrix": "MedeirosDev\\WeatherHereDeveloper\\Frameworks\\Laravel\\WeatherHereDeveloper"
+        "WeatherHereDeveloper": "MedeirosDev\\WeatherHereDeveloper\\Frameworks\\Laravel\\WeatherHereDeveloper"
       }
     }
   }
